WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121206
Web Inspector shouldn't artificially allocate the arguments object in functions that don't use it
https://bugs.webkit.org/show_bug.cgi?id=121206
Summary
Web Inspector shouldn't artificially allocate the arguments object in functio...
Geoffrey Garen
Reported
2013-09-11 20:41:32 PDT
Web Inspector shouldn't artificially allocate the arguments object in functions that don't use it
Attachments
Patch
(9.46 KB, patch)
2013-09-11 21:20 PDT
,
Geoffrey Garen
joepeck
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2013-09-11 21:20:36 PDT
Created
attachment 211391
[details]
Patch
Mark Lam
Comment 2
2013-09-12 15:28:38 PDT
Comment on
attachment 211391
[details]
Patch LGTM.
Joseph Pecoraro
Comment 3
2013-09-12 15:46:17 PDT
Comment on
attachment 211391
[details]
Patch r=me
Geoffrey Garen
Comment 4
2013-09-12 16:06:31 PDT
Committed
r155657
: <
http://trac.webkit.org/changeset/155657
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug